[gd_scene load_steps=7 format=3 uid="uid://7rwa47xsk8m2"]

[ext_resource type="Script" uid="uid://iv62pmt28sf8" path="res://PlayerController.gd" id="1_r13wb"]
[ext_resource type="PackedScene" uid="uid://bqpwh2qhltcpn" path="res://Scenes/Rifle.tscn" id="2_3mwrl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rbo2t"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4r48s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_n4p4x"]
height = 1.4

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bvfbr"]
height = 1.5

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER")]
script = ExtResource("1_r13wb")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")

[node name="std_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rbo2t")

[node name="std_mesh" type="MeshInstance3D" parent="std_collision"]
visible = false
mesh = SubResource("CapsuleMesh_4r48s")

[node name="crh_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CapsuleShape3D_n4p4x")
disabled = true

[node name="crh_mesh" type="MeshInstance3D" parent="crh_collision"]
visible = false
mesh = SubResource("CapsuleMesh_bvfbr")

[node name="CameraController" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Rifle" parent="CameraController/Camera3D" instance=ExtResource("2_3mwrl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.243491, -0.201544, -0.49893)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.300448, 0)
target_position = Vector3(0, 1.7, 0)
